--- a/css/style.css
+++ b/css/style.css
@@ -1253,6 +1253,6 @@ fieldset {
 input .active:invalid {
   outline: 3px solid red;
 }
-input .active:not(:invalid) {
+input .active {
   outline: 3px solid green;
 }
